k8s/mongodb_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mongodb-deployment
 namespace: mern-app
 labels:
   tier: database
spec:
 replicas: 1
 selector:
   matchLabels:
     tier: database
 template:
   metadata:
     labels:
       tier: database
   spec:
     containers:
     - name: mongodb
       image: mongo:7.0.6
       imagePullPolicy: Always
       #command:
         #- "mongod"
         #- "--bind_ip_all"
         #- "--storageEngine=wiredTiger"
         #- "--auth"
       ports:
       - containerPort: 27017
       resources:
         requests:
           memory: "512Mi"
           cpu: "500m"
         limits:
           memory: "1Gi"
           cpu: "1"
