k8s/backend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mern-app
  labels:
    tier: backend
spec:
  selector:
    tier: backend
  ports:
  - name: backend-service
    protocol: TCP
    port: 5000
    targetPort: 5000
