k8s/frontend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: mern-app
  labels:
    tier: frontend
spec:
  selector:
    tier: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
