k8s/mongodb_service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: mern-app
  labels:
    tier: database
spec:
  selector:
    tier: database
  ports:
  - name: mongodb-service
    protocol: TCP
    port: 27017
    targetPort: 27017
